syntax = "proto3";

package proto;

option go_package = "github.com/Akash-Manikandan/app-backend/internal/modules/user;user";

import "validate/validate.proto";

// UserService provides user management functionality
service UserService {
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (UserResponse);
  
  // UpdateUser updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  
  // DeleteUser deletes a user by ID
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // ListUsers retrieves a list of users with pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // VerifyUser verifies a user's email
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
}

// CreateUserRequest represents a request to create a new user
message CreateUserRequest {
  string username = 1 [(validate.rules).string = {
    min_len: 3,
    max_len: 50,
    pattern: "^[a-zA-Z0-9_-]+$"
  }];
  string email = 2 [(validate.rules).string = {
    email: true,
    max_len: 100
  }];
  string password = 3 [(validate.rules).string = {
    min_len: 5,
    max_len: 100
  }];
  string first_name = 4 [(validate.rules).string = {max_len: 50}];
  string last_name = 5 [(validate.rules).string = {max_len: 50}];
}

// GetUserRequest represents a request to get a user by ID
message GetUserRequest {
  string id = 1 [(validate.rules).string = {
    len: 26,
    pattern: "^[0-9A-Z]+$"
  }];
}

// UpdateUserRequest represents a request to update a user
message UpdateUserRequest {
  string id = 1 [(validate.rules).string = {
    len: 26,
    pattern: "^[0-9A-Z]+$"
  }];
  optional string first_name = 2 [(validate.rules).string = {max_len: 50}];
  optional string last_name = 3 [(validate.rules).string = {max_len: 50}];
  optional string avatar = 4 [(validate.rules).string = {max_len: 255}];
  optional string bio = 5 [(validate.rules).string = {max_len: 1000}];
  optional bool is_active = 6;
  optional bool is_verified = 7;
}

// DeleteUserRequest represents a request to delete a user
message DeleteUserRequest {
  string id = 1 [(validate.rules).string = {
    len: 26,
    pattern: "^[0-9A-Z]+$"
  }];
}

// DeleteUserResponse represents a response after deleting a user
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// ListUsersRequest represents a request to list users
message ListUsersRequest {
  int32 limit = 1 [(validate.rules).int32 = {gte: 1, lte: 100}];
  int32 offset = 2 [(validate.rules).int32 = {gte: 0}];
}

// ListUsersResponse represents a response containing a list of users
message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 limit = 2;
  int32 offset = 3;
  int32 total = 4;
}

// UserResponse represents a user (without sensitive data)
message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string avatar = 6;
  string bio = 7;
  bool is_active = 8;
  bool is_verified = 9;
  string created_at = 10;
  string updated_at = 11;
}

// VerifyUserRequest represents a request to verify a user
message VerifyUserRequest {
  string user_id = 1 [(validate.rules).string = {
    len: 26,
    pattern: "^[0-9A-Z]+$"
  }];
}

// VerifyUserResponse represents a response after verifying a user
message VerifyUserResponse {
  bool success = 1;
  string message = 2;
  UserResponse user = 3;
}
